--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "mongoose": "^6.2.0",
     "morgan": "1.10.0",
     "multer": "^1.4.4",
+    "nodemailer": "^6.7.2",
+    "supertest": "^6.2.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
